--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "dir_filenames",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Get dir filenames.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha && exit 1"
+    "test": "mocha --exit"
   },
   "repository": {
     "type": "git",
